--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,237 @@
 *:after {
   box-sizing: border-box;
 }
+
+
+body {
+  font-family: "Tilt Neon", sans-serif;
+}
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem;
+  
+}
+
+.siteName a {
+  font-size: 2rem;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+#tools a {
+  text-decoration: none;
+  color: rgb(37, 34, 34);
+  vertical-align: top;
+}
+
+#nav ul {
+  background-color: black;
+  color: white;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+#welcome {
+  font-size: 1.1rem;
+}
+
+#features {
+  display: grid;
+  color: rgb(25, 173, 223);
+  font-size: 11px;
+  font-weight: 900;
+  background-color: white; 
+}
+
+#features p {
+  font-size: 12px;
+}
+
+#features h2, p, button {
+  margin: 0 auto;
+  font-weight: 900;
+  border: none;
+}
+
+.container {
+  position: relative;
+}
+
+.container img {
+  display: block;
+  width: 275px;
+  height: auto;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 0;
+  padding-top: 13px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.overlay-text button{
+  background-color: rgb(25, 173, 223);
+  font-weight: 900;
+}
+
+#reviews h2 {
+   font-size: 20px;
+   margin-bottom: 0;
+}
+
+#reviews li {
+  padding: 8px;
+  font-size: 12px;
+}
+
+#reviews ul {
+ padding-left: 15px;
+ margin-top: 0;
+ font-weight: bold;
+}
+
+#upgrades h2 {
+  margin-bottom: 0;
+  font-size: 20px;
+}
+
+#upgradesButton {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#upgradesButton figure {
+  display: grid;
+  align-items: center;
+  background-color: rgb(25, 173, 223);
+  border: 2px solid black;
+  padding: 1rem;
+  border-radius: 5px;
+  width: 150px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
+#upgradesButton img {
+  display: block;
+  margin: 0 auto 0.5rem auto;
+}
+
+#upgradeButton a {
+  margin-top: 0.5rem;
+  border: none;
+  color: blue;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+#upgradesButton figcaption a {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+@media screen and (min-width: 500px) {
+  body {
+    max-width: 1080px;
+    margin: auto;
+    background-color: pink;
+    background-image: url('/images/site/checkerboard.jpg');
+  }
+
+  #wrapper {
+    background-color: white;
+    border: 6px solid rgb(25, 173, 223);
+    border-radius: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .siteName a {
+    font-size: 3rem;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  #tools a {
+    font-size: 1.75rem;
+    padding-right: 1rem;
+  }
+
+  #nav ul {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    font-size: 1.5rem;
+  }
+
+  #welcome {
+    font-size: 2rem;
+    margin-left: 1rem;
+  }
+
+  .container img {
+    width: 800px;
+    height: auto;
+    max-width: 100%;
+  }
+
+ .overlay-text h2 {
+    font-size: 2rem;
+    padding-left: 1rem;
+    padding-top: 5rem;
+  }
+  
+  #features p {
+    font-size: 1.25rem;
+    margin-left: 1rem;
+    margin-bottom: .5rem;
+  }
+
+  #features button {
+    margin-left: 1rem;
+  }
+
+  #upgradesReviews {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #reviews {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  #reviews h2 {
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  #reviews li {
+    font-size: 1rem;
+    margin-left: 1rem;
+  }
+
+  #upgrades {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  #upgrades h2 {
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+  }
+  footer {
+    margin-left: 1rem;
+  }
+}
