--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,63 @@
-<h1>Keith Worsham</h1>
+<h1 id="welcome">Welcome to CSE Motors!</h1>
+
+<section id="features">
+    <div class="container">
+        <img src="/images/vehicles/delorean.jpg" alt="delorean" class ="background-image">
+        <div class="overlay-text">
+            <h2>DMC Delorean</h2>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dicel</p>
+            <button>Own Today</button>
+        </div>
+        
+    </div>
+</section>
+
+<div id="upgradesReviews">
+    <section id="reviews">
+        <h2>DMC Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>80's livin and love it!" (5/5)</li>
+        </ul>
+    </section>
+
+    <section id="upgrades">
+        <h2>Delorean Upgrades</h2>
+
+        <div id="upgradesButton">
+            <figure>
+                <img src="/images/upgrades/flux-cap.png" alt="fluxCapacitor" style="width: 50px;">
+                <figcaption>
+                    <a href="#">Flux Capacitor</a>
+                </figcaption>
+            </figure>
+            
+            <figure>
+                <img src="/images/upgrades/flame.jpg" alt="flame" style="width: 50px;">
+                <figcaption>
+                    <a href="#">Flame Decals</a>
+                </figcaption>
+            </figure>
+            
+            <figure>
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper" style="width: 50px;">
+                <figcaption>
+                    <a href="#">Bumper Sticker</a>   
+                </figcaption>
+            </figure>
+                
+            <figure>
+                <img src="/images/upgrades/hub-cap.jpg" alt="hub" style="width: 50px;">
+                <figcaption>
+                    <a href="#">Hub Caps</a>
+                </figcaption>
+            </figure>
+        </div>    
+    </section>
+</div>
+    
