--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,7 +1,10 @@
+<!-- ***************This is HTML******************** -->
 <% if (title) { %>
 <h1><%= title %></h1>
 <% } else {
   res.redirect('/')
 } %>
+
+<!-- ***************This is ejs******************** -->
 <%# messages() %>
 <%- grid %>
