--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <h2>DMC Delorean</h2>
             <p>3 Cup holders</p>
             <p>Superman doors</p>
-            <p>Fuzzy dicel</p>
+            <p>Fuzzy dice</p>
             <button>Own Today</button>
         </div>
         
@@ -30,6 +30,7 @@
         <h2>Delorean Upgrades</h2>
 
         <div id="upgradesButton">
+
             <figure>
                 <img src="/images/upgrades/flux-cap.png" alt="fluxCapacitor" style="width: 50px;">
                 <figcaption>
