Add session management and flash messaging support; implement account routes and login view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <h1 id="welcome">Welcome to CSE Motors!</h1>
 
+<%- messages() %>
+
 <section id="features">
     <div class="container">
         <img src="/images/vehicles/delorean.jpg" alt="delorean" class ="background-image">
