--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -188,6 +188,16 @@ body {
   }
 
 
+    #registerForm {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    background-color: rgb(3, 96, 126);
+    padding: 1rem 1rem 1rem 1rem;
+    border: darkgray solid 3px;
+    border-radius: .5rem;
+    box-shadow: 0 0 20px 8px  rgb(25, 173, 223)
+  }
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
