--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -7,12 +7,12 @@
 <body>
   <h1>Register</h1>
   <%- messages() %>
-  <form action="/account/reguster" method="post" id="registerForm">
-    <label id="fName" for="account_firstName">First Name</label>
-    <input type="text" id="account_firstName" name="account_firstName" required>
+  <form action="/account/register" method="post" id="registerForm">
+    <label id="fName" for="account_firstname">First Name</label>
+    <input type="text" id="account_firstName" name="account_firstname" required>
 
-    <label id="lName" for="account_lastName">Last Name</label>
-    <input type="text" id="account_lastName" name="account_lastName" required>
+    <label id="lName" for="account_lastname">Last Name</label>
+    <input type="text" id="account_lastName" name="account_lastname" required>
 
     <label id="email" for="account_email">Email address</label>
     <input type="email" id="account_email" name="account_email" required>
