--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,10 +9,18 @@
   <%- messages() %>
   <form action="/account/login" method="post" id="loginForm">
     <label id="email" for="account_email">Email</label>
-    <input type="email" id="account_email" name="account_email" required>
+    <input type="email" id="account_email" name="account_email" 
+    required
+    >
 
     <label id="acct_pass"     for="account_password">Password</label>
-    <input type="password" id="account_password" name="account_password" required>
+    <input 
+      type="password" 
+      id="account_password" 
+      name="account_password" 
+      required
+      pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{};':\\|,.<>\/?]).{12,}$"
+      >
 
   
     <button id="button" type="submit">Login</button>
